--- a/week5/index.html
+++ b/week5/index.html
@@ -8,5 +8,18 @@
 <body>
     <div>Content goes here!</div>
     <script src="js/main.js"></script>
+    
+    <script>
+        var a = 5;
+        var b = 6;
+        alert(a + b);
+    </script>
+    <script>
+        console.log(myFunction(7, 9));
+        alert(myFunction(7, 9));
+    </script>
+    <script>
+        arrays();
+    </script>
 </body>
 </html>
